public/css/styles.css
/* ... */
.confirmation-true,
.confirmation-false {
    flex-grow: 1;
    font-size: var(--step-1);
    max-width: 10rem;
    padding: 0.3rem 0.7rem;
}

.confirmation-true {
    background-color: var(--correct-color)!important;
}
.confirmation-true:hover {
    box-shadow: 0 3px 5px 0 #0908!important;
}

.confirmation-false {
    background-color: var(--wrong-color)!important;
}
.confirmation-false:hover {
    box-shadow: 0 3px 5px 0 #9008!important;
}

.score {
    padding: 0 0.5rem;
    font-size: var(--step-1);
    text-shadow: var(--text-outline);
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 18px;
}

.carousel {
    text-align: center;
}

.carousel_display_label-wrapper, .display-inner {
    position: relative;
    gap: 1em;
}

.carousel_display_label-wrapper {
    padding: 1.5em 1em;
    margin: 0 1.5rem;
}

.display-outer {
    width: fit-content;
}

.display-inner {
    padding: 1rem 1.5rem;
    margin: 0 3rem;
}

.carousel_display_label-wrapper h2, .display-inner h2 {
    display: flex;
    font-family: "Espionage", sans-serif;
    font-size: var(--step-0);
    letter-spacing: 0.15em;
    justify-content: space-between;
    margin-top: -0.6rem;
    padding: 0 0.5rem 0 0.65rem;
    position: absolute;
    width: 100%;
    gap: 0.5rem;
    top: 0;
    left: 0;
    text-shadow: var(--text-outline);
    color: var(--display-label-color);
}

.carousel_display_label_progress, .display_label_level {
    font-family: monospace;
}

.display_label_type {
    white-space: nowrap;
}

.display_text {
    max-height: calc(100vh - 260px);
    min-width: 270px;
    line-height: 1.5;
    padding: 0.5rem 0.75rem 0 0.125rem;
    overflow-y: auto;
    overflow-x: hidden;
}

.display_text.big-question .formatted-premise {
    margin-bottom: 0.2rem;
}

.display_text.minimal .formatted-premise,
.display_text.minimal .formatted-operation,
.display_text.minimal:not(.complicated-conclusion) .formatted-conclusion {
    display: grid;
    grid-template-columns: 1fr auto 1fr;
    justify-items: center;
    gap: 1.2rem;
}

.display_text.minimal .formatted-premise > span:nth-child(1),
.display_text.minimal .formatted-operation > span:nth-child(1),
.display_text.minimal:not(.complicated-conclusion) .formatted-conclusion > span:nth-child(1) {
    justify-self: end;
}

.display_text.minimal .formatted-premise > span:nth-child(2),
.display_text.minimal .formatted-operation > span:nth-child(2),
.display_text.minimal:not(.complicated-conclusion) .formatted-conclusion > span:nth-child(2) {
    min-width: 2rem;
    justify-self: center;
    text-align: center;
    display: flex;
    justify-content: center;
    align-items: center;
}

.display_text.minimal .formatted-premise > span:nth-child(3),
.display_text.minimal .formatted-operation > span:nth-child(3),
.display_text.minimal:not(.complicated-conclusion) .formatted-conclusion > span:nth-child(3) {
    justify-self: start;
}

.game-area.wide-premises {
    max-width: 900px;
}

.display_text.wide-premises .formatted-premise {
    display: grid;
    grid-template-columns: 1fr 2.5fr 1fr 2.5fr 1fr;
    justify-items: center;
    gap: 0.7rem;
}

.display_text.wide-premises.minimal .formatted-premise {
    grid-template-columns: repeat(5, 1fr);
    gap: 1.2rem;
}

.display_text.wide-premises .formatted-premise > span:nth-child(1) {
    justify-self: end;
}

.display_text.wide-premises .formatted-premise > span:nth-child(3) {
    justify-self: center;
}

.display_text.wide-premises .formatted-premise > span:nth-child(5) {
    justify-self: start;
}

.ci-Wifi_None {
    visibility: hidden;
}

.hqli-preamble,
.hqli-postamble,
.hqli-transform-header {
    font-size: var(--step--2);
    opacity: 0.7;
}

.formatted-premise,
.formatted-operation {
    margin-bottom: 0.7rem;
    position: relative;
}

.formatted-premise[data-number]::before {
    content: attr(data-number);
    position: absolute;
    right: 100%;
    margin-right: 0.5rem;
    opacity: 0.6;
    font-size: 0.9em;
    white-space: nowrap;
    font-family: monospace;
    font-weight: normal;
}

.hqli-premise,
.hqli-operation {
    margin-bottom: 0.4rem;
    position: relative;
}

.hqli-premise[data-number]::before {
    content: attr(data-number);
    position: absolute;
    right: 100%;
    margin-right: 0.4rem;
    opacity: 0.5;
    font-size: 0.8em;
    white-space: nowrap;
    font-family: monospace;
}

.preamble,
.postamble,
.transform-header {
    user-select: none;
    color: var(--preamble-color);
    display: block;
    font-size: var(--step--1);
    font-weight: bolder;
    line-height: 0.4rem;
    margin: 0.5rem 0 0.9rem 0;
}

.postamble, .transform-header {
    margin-top: 2.2rem;
}

.highlight {
    font-weight: 700;
    padding: 0 3px;
    background-color: var(--background-color);
    letter-spacing: normal;
    border-radius: 2px;
}

.pos-degree {
    color: #00E5FF;
}

.neg-degree {
    color: #FF6700;
}

.formatted-conclusion {
    margin-top: 0;
    position: relative;
}

.formatted-conclusion,
.formatted-premise,
.formatted-operation,
.preamble,
.postamble,
.transform-header {
    padding: 0 1px;
    text-shadow: var(--text-outline);
}

.spoiler .formatted-conclusion::after {
    content: '';
    position: absolute;
    bottom: 0;
    left: 0;
    width: 100%;
    height: 100%;
    padding: 3px;
    background: #000;
}

.spoiler:hover .formatted-conclusion::after {
    background: transparent;
    pointer-events: none;
}

.carousel_controls {
    display: inline-flex;
    gap: 150px;
    margin: 0.5rem auto 0 auto;
}

.border-left,
.border-right,
.bracket-lip-top-left,
.bracket-lip-top-right,
.bracket-lip-bottom-left,
.bracket-lip-bottom-right {
    position: absolute;
    background-color: var(--bracket-color);
    box-shadow: var(--bracket-box-shadow);
}

.border-left,
.border-right {
    height: 100%;
    width: 0.33rem;
    top: 0;
}

.border-left {
    left: -1rem;
}

.border-right {
    right: -1rem;
}
/* ... */

